--- a/dist2/index.html
+++ b/dist2/index.html
@@ -26,9 +26,9 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/dist2.loader.js";
       var config = {
-        dataUrl: buildUrl + "/dist2.data.gz",
-        frameworkUrl: buildUrl + "/dist2.framework.js.gz",
-        codeUrl: buildUrl + "/dist2.wasm.gz",
+        dataUrl: buildUrl + "/dist2.data",
+        frameworkUrl: buildUrl + "/dist2.framework.js",
+        codeUrl: buildUrl + "/dist2.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "September2020",
